# Health

./: .gitignore  .gitlab-ci.yml  .vala-lint.conf  CODESTYLE.md  CONTRIBUTING.md  Cargo.toml  Health.code-workspace  Health.doap  README.md  build.rs  dev.Cogitri.Health.Devel.json  dev.Cogitri.Health.json  flake.nix  health.doap  meson.build  meson_options.txt  org.gnome.Health.json  shell.nix
data/: custom.css  dev.Cogitri.Health.Autostart.desktop.in.in  dev.Cogitri.Health.Daemon.desktop.in.in  dev.Cogitri.Health.appdata.xml.in  dev.Cogitri.Health.appdata.xml.in.in  dev.Cogitri.Health.desktop.in  dev.Cogitri.Health.desktop.in.in  dev.Cogitri.Health.gresource.xml  dev.Cogitri.Health.gschema.xml  dev.Cogitri.Health.metainfo.xml.in.in  dev.Cogitri.Health.service.in  meson.build  org.gnome.Health.appdata.xml.in  org.gnome.Health.desktop.in  org.gnome.Health.gschema.xml  style.css
data/icons/: meson.build
data/tracker/: activities.rq  activities_min.rq  activities_min_max.rq  calories.rq  meson.build  migrate_activities_date_datetime.rq  migrate_weight_date_datetime.rq  most_frequent_activities.rq  steps.rq  todays_steps.rq  weight_exists_on_date.rq  weight_latest.rq  weights.rq  weights_min.rq
data/tracker/ontology/: health.description  health.ontology  meson.build
data/ui/: activity_add_dialog.ui  activity_row.ui  activity_type_row.blp  activity_type_row.ui  activity_type_selector.blp  activity_type_selector.ui  activity_view.ui  add_view.ui  bmi_level_bar.blp  bmi_level_bar.ui  calorie_view.ui  card.blp  card.ui  data_add_dialog.blp  data_add_dialog.ui  date_editor.ui  date_selector.blp  date_selector.ui  distance_action_row.blp  distance_action_row.ui  home_page.ui  import_export_dialog_base.blp  import_export_dialog_base.ui  legend_row.blp  legend_row.ui  password_entry.blp  password_entry.ui  preferences_dialog.blp  preferences_window.blp  preferences_window.ui  setup_window.blp  setup_window.ui  shortcuts_window.blp  shortcuts_window.ui  step_view.ui  sync_list_box.blp  sync_list_box.ui  tab_button.blp  tab_button.ui  view.ui  (+11 more)
data/ui/plugins/: details.blp  details.ui  overview.blp  overview.ui
data/ui/plugins/activities/: details.blp  details.ui  summary.blp  summary.ui
data/ui/plugins/calories/: details.blp  details.ui  summary.blp  summary.ui
data/ui/plugins/steps/: details.blp  details.ui  summary.blp  summary.ui
docs/: PRIVACY.md  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kk.po  meson.build  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  uz.po  (+1 more)
src/: activity.vala  activity_add_dialog.ui  activity_add_dialog.vala  activity_row.vala  activity_type_selector.vala  activity_view.vala  add_dialog.ui  add_dialog.vala  add_dialog_activity.ui  add_dialog_weight.ui  application.vala  bmi_level_bar.vala  config.rs.in  config.vapi  database.vala  date_editor.ui  date_editor.vala  dev.Cogitri.Health.gresource.xml  distance_action_row.vala  gnome_health.gresource.xml  graph_view.vala  lib.rs  main.rs  main.vala  meson.build  oauth2_proxy.vala  preferences_window.ui  preferences_window.vala  primary_menu.ui  primary_menu.vala  settings.vala  setup_window.ui  setup_window.vala  step_view.ui  steps.vala  sync_view.ui  sync_view.vala  units.vala  util.vala  view.vala  (+6 more)
src/core/: application.rs  application.vala  config.vapi  database.rs  database.vala  date.rs  i18n.rs  macros.rs  mod.rs  ref_iter.rs  settings.rs  settings.vala  unit_kind.rs  unit_system.rs  units.vala  unitsystem.rs  util.vala  utils.rs
src/daemon/: application.rs  main.rs  mod.rs
src/model/: activity.rs  activity.vala  activity_data_points.rs  activity_info.rs  activity_model.vala  activity_type.rs  activity_type_row_data.rs  data_category.rs  fn_boxed.rs  graph_model.vala  graph_model_calories.rs  graph_model_steps.rs  graph_model_weight.rs  mod.rs  model_activity.rs  model_notification.rs  notification_frequency.rs  steps.rs  steps_graph_model.vala  unitsize.rs  user.rs  weight.rs  weight_change.rs  weight_graph_model.vala
src/plugins/: details.rs  mod.rs  overview.rs  plugin.rs  plugin_list.rs  plugin_name.rs  plugin_object.rs  registrar.rs  summary.rs
src/plugins/activities/: data_provider.rs  data_provider_mocked.rs  details.rs  mod.rs  plugin.rs  summary.rs
src/plugins/calories/: data_provider.rs  data_provider_mocked.rs  details.rs  plugin.rs  summary.rs
src/plugins/steps/: data_provider.rs  data_provider_mocked.rs  details.rs  plugin.rs  summary.rs
src/plugins/weight/: data_provider.rs  data_provider_mocked.rs  details.rs  mod.rs  plugin.rs  summary.rs
src/sync/: csv.rs  database_receiver.rs  google_fit.rs  google_fit_oauth2_proxy.vala  mod.rs  oauth2_proxy.vala  serialize.rs  sync_provider.rs  ureq_http_client.rs
src/views/: activity_view.vala  add_view.rs  bar_graph_view.rs  graph_view.rs  graph_view.vala  mod.rs  steps_view.vala  view.rs  view.vala  view_activity.rs  view_add.rs  view_add_activity.rs  view_add_weight.rs  view_calories.rs  view_home_page.rs  view_steps.rs  view_weight.rs  weight_view.vala
src/widgets/: activity_row.rs  activity_row.vala  activity_type_row.rs  activity_type_selector.rs  activity_type_selector.vala  arrows.rs  bmi_level_bar.rs  bmi_level_bar.vala  card.rs  circular_progress_bar.rs  color_circle.rs  date_editor.vala  date_selector.rs  distance_action_row.rs  distance_action_row.vala  legend_row.rs  mod.rs  password_entry.rs  sync_list_box.rs  sync_list_box.vala  tab_button.rs  unit_spinbutton.rs
src/windows/: activity_add_dialog.rs  activity_add_dialog.vala  data_add_dialog.rs  export_dialog.rs  import_dialog.rs  import_export_dialog_base.rs  mod.rs  preferences_dialog.rs  preferences_window.rs  preferences_window.vala  setup_window.rs  setup_window.vala  weight_add_dialog.rs  weight_add_dialog.vala  window.rs  window.vala
test/: database.vala  google_fit_oauth2_proxy.vala  meson.build  test_main.vala  test_settings.vala  units.vala
(+25 files in other folders)
