[package]
name = "health"
version = "0.93.3"
edition = "2018"
license = "GPL-3.0-or-later"
default-run = "health"

[lib]
name = "libhealth"
path = "src/lib.rs"

[[bin]]
name = "health"
path = "src/main.rs"

[[bin]]
name = "health-daemon"
path = "src/daemon/main.rs"

[dependencies.adw]
version = "0.1.0-alpha-6"
package = "libadwaita"

[dependencies.anyhow]
version = "1.0"

[dependencies.ashpd]
version = "0.2.0-alpha-5"
features = ["feature_gtk4"]

[dependencies.bitflags]
default-features = false
version = "1.3"

[dependencies.chacha20poly1305]
version = "0.9.0"

[dependencies.chrono]
default-features = false
features = ["std"]
version = "0.4"

[dependencies.csv]
default-features = false
version = "1.1"

[dependencies.dtparse]
version = "1.2"

[dependencies.delegate]
version = "0.6"

[dependencies.easy-ext]
default-features = false
version = "1"

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.glob]
version = "0.3"

[dependencies.gtk]
version = "0.3"
package = "gtk4"
features = ["v4_2"]

[dependencies.gtk-macros]
version = "0.3.0"

[dependencies.http]
version = "0.2"

[dependencies.notify-rust]
version = "4"

[dependencies.num-derive]
version = "0.3"

[dependencies.num-traits]
version = "0.2"

[dependencies.oauth2]
default-features = false
version = "4.0.0"
features = ["ureq"]

[dependencies.once_cell]
version = "1.5"

[dependencies.pangocairo]
version = "0.14"

[dependencies.paste]
version = "1.0"

[dependencies.regex]
version = "1.4.3"

[dependencies.ring]
version = "0.16.0"

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.serde_json]
version = "1"

[dependencies.sha2]
version = "0.9.5"

[dependencies.strum]
version = "0.23"
features = ["derive"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tracker]
version = "0.1"
package = "tracker-rs"

[dependencies.uom]
default-features = false
version = "0.31"
features = ["f32", "si"]

[dependencies.ureq]
default-features = false
version = "2"
features = ["json"]

[dependencies.secret-service]
version = "2"

[dependencies.zxcvbn]
version = "2"

[dev-dependencies.serde_test]
version = "1"

[dev-dependencies.tempfile]
version = "3"

[profile.release]
lto = true
panic = "abort"
debug = true

[profile.dev]
debug = true
