[package]
name = "health"
version = "0.94.0"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.58"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
description = "Track your fitness goals"
documentation = "https://world.pages.gitlab.gnome.org/Health/libhealth"
readme = "README.md"
homepage = "https://gitlab.gnome.org/World/Health"
repository = "https://gitlab.gnome.org/World/Health"
keywords = ["gnome", "health", "gtk"]
categories = ["visualization", "gui"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "libhealth"
path = "src/lib.rs"

[[bin]]
name = "health"
path = "src/main.rs"

[build-dependencies.glob]
version = "0.3"

[dependencies.adw]
version = "0.1.0"
package = "libadwaita"
features = ["gtk_v4_4"]

[dependencies.anyhow]
version = "1.0"

[dependencies.async-trait]
version = "0.1.52"

[dependencies.bitflags]
default-features = false
version = "1.3"

[dependencies.chacha20poly1305]
version = "0.10.0"

[dependencies.csv]
default-features = false
version = "1.1"

[dependencies.delegate]
version = "0.7"

[dependencies.easy-ext]
default-features = false
version = "1"

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.glob]
version = "0.3"

[dependencies.gtk]
version = "0.4"
package = "gtk4"
features = ["v4_4"]

[dependencies.gtk-macros]
version = "0.3.0"

[dependencies.http]
version = "0.2"

[dependencies.libsecret]
version = "0.1.3"

[dependencies.num-derive]
version = "0.3"

[dependencies.num-traits]
version = "0.2"

[dependencies.oauth2]
default-features = false
version = "4.0.0"
features = ["ureq"]

[dependencies.dyn-clonable]
version = "0.9"

[dependencies.once_cell]
version = "1.5"

[dependencies.pangocairo]
version = "0.15.1"

[dependencies.paste]
version = "1.0"

[dependencies.regex]
version = "1.4.3"

[dependencies.ring]
version = "0.16.0"

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.serde_json]
version = "1"

[dependencies.sha2]
version = "0.10"

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tracker]
version = "0.2.1"
package = "tracker-rs"
features = ["v3_3"]

[dependencies.uom]
default-features = false
version = "0.33"
features = ["f32", "si"]

[dependencies.ureq]
default-features = false
version = "2"
features = ["json"]

[dependencies.zxcvbn]
version = "2"

[dev-dependencies.float_eq]
version = "1"

[dev-dependencies.serde_test]
version = "1"

[dev-dependencies.tempfile]
version = "3"

[profile.release]
lto = true
panic = "abort"
debug = true

[profile.dev]
debug = 2
