valadoc = find_program('valadoc')
custom_target('docs',
  input: health_sources,
  output: 'docs',
  command: [
    valadoc,
    '--doclet=html',
    '--force',
    '--package-name=@0@'.format(meson.project_name()),
    '--package-version=@0@'.format(meson.project_version()),
    '--pkg=glib-2.0',
    '--pkg=gio-2.0',
    '--pkg=gio-unix-2.0',
    '--pkg=gtk+-3.0',
    '--pkg=gee-0.8',
    '--pkg=libhandy-1',
    '--pkg=sqlite3',
    '--pkg=config',
    '--vapidir=@0@'.format(meson.current_source_dir() / '..' / 'src'),
    '--directory=@OUTDIR@',
    '--use-svg-images',
    health_sources,
  ],
  build_by_default: true,
)
