valadoc = find_program('valadoc')
custom_target('docs',
  input: health_sources,
  output: 'docs',
  command: [
    valadoc,
    '--doclet=html',
    '--force',
    '--package-name=@0@'.format(meson.project_name()),
    '--package-version=@0@'.format(meson.project_version()),
    '--pkg=glib-2.0',
    '--pkg=gio-2.0',
    '--pkg=gio-unix-2.0',
    '--pkg=gtk4',
    '--pkg=gee-0.8',
    '--pkg=libhandy-4',
    '--pkg=sqlite3',
    '--pkg=config',
    '--pkg=rest-0.7',
    '--pkg=libsoup-2.4',
    '--pkg=libsecret-1',
    '--pkg=json-glib-1.0',
    '--vapidir=@0@'.format(meson.current_source_dir() / '..' / 'src'),
    '--directory=@OUTDIR@',
    '--use-svg-images',
    health_sources,
  ],
  build_by_default: true,
)
