i18n.gettext(
  gettext_package,
  args: ['--keyword=i18n', '--keyword=i18n_f', '--keyword=i18n_k',
         '--keyword=ni18n:1,2', '--keyword=ni18n_f:1,2', '--keyword=ni18n_k:1,2',
         '--keyword=pi18n:1c,2', '--keyword=pi18n_f:1c,2', '--keyword=pi18n_k:1c,2',
         '--keyword=pni18n:1c,2,3', '--keyword=pni18n_f:1c,2,3', '--keyword=pni18n_k:1c,2,3',
         ],
  preset: 'glib',
 )
